# taxfree-rdc-desktop

./: .gitignore  .gitlab-ci.yml  README.md  SECURITY.md  docker-compose.yml  package-lock.json  render.yaml
.github/workflows/: tauri-build.yml
backend/: .env.example  .env.example.production  Dockerfile  Procfile  requirements.txt
backend/apps/accounts/: admin.py  admin_models.py  admin_serializers.py  admin_views.py  models.py  permissions.py  security_middleware.py  security_service.py  serializers.py  services.py  settings_views.py  signals.py  urls.py  views.py
backend/apps/audit/: admin.py  apps.py  middleware.py  models.py  report_urls.py  report_views.py  serializers.py  services.py  urls.py  views.py
backend/config/: celery.py  urls.py  wsgi.py
backend/fixtures/: seed_data.json
backend/providers/: __init__.py  notification_provider.py  payment_provider.py
backend/services/: audit_service.py  email_service.py  pdf_service.py  pdf_service_v2.py  receipt_service.py  refund_service.py  reports_service.py  settings_service.py  taxfree_service.py
backend/tests/: conftest.py  test_api.py  test_taxfree.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/nsis/: LICENSE.txt
frontend/src-tauri/src/: lib.rs
(+231 files in other folders)
